<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dynamic Color Picker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_val">New Value : </string>
    <string name="old_val">Old Value : </string>
    <string name="activity_title">Dynamic Color Picker</string>
    <string name="red_title">Red</string>
    <string name="alpha_title">Alpha</string>
    <string name="green_title">Green</string>
    <string name="blue_title">Blue</string>
    <string name="menu_reset">Reset</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mix_it">MIX IT!</string>

</resources>
