<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">

            <NumberPicker
                android:id="@+id/spAlphaPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/tvAlphaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/alpha_title"
                android:layout_weight="0"
                android:textColor="#808080"
                android:alpha=".3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">

            <NumberPicker
                android:id="@+id/spRedPicker"
                android:paddingRight="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"  />

            <TextView
                android:id="@+id/tvRedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/red_title"
                android:layout_weight="0"
                android:textColor="#ffff0000"
                android:alpha=".3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            ]
            <NumberPicker
                android:id="@+id/spGreenPicker"
                android:paddingRight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"  />

            <TextView
                android:id="@+id/tvGreenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/green_title"
                android:layout_weight="0"
                android:textColor="#008000"
                android:alpha=".3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <NumberPicker
                android:id="@+id/spBluePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"  />

            <TextView
                android:id="@+id/tvBlueTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blue_title"
                android:layout_weight="0"
                android:textColor="#0000FF"
                android:alpha=".3"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnMixIt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/placeholder"/>
        </FrameLayout>

    <View
        android:id="@+id/vColorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"/>




</LinearLayout>